Testimonal Section Small Bugs Fixed

--- a/src/components/Testimonials/style.css
+++ b/src/components/Testimonials/style.css
@@ -3,7 +3,15 @@
   color: var(--color-zinc-200) !important;
 }
 
-@media (prefers-color-scheme: dark) {
+.swiper-button-disabled:hover #testimonial_count--border {
+  border-left: 2px solid var(--color-zinc-200) !important;
+}
+
+.swiper-button-disabled:hover {
+  background: none !important;
+}
+
+/* @media (prefers-color-scheme: dark) {
   .swiper-button-disabled {
     border: 2px solid var(--color-zinc-800) !important;
     color: var(--color-zinc-800) !important;
@@ -12,8 +20,4 @@
   .swiper-button-disabled #testimonial_count--border {
     border-left: 2px solid var(--color-zinc-800) !important;
   }
-}
-
-.swiper-button-disabled:hover {
-  background: none !important;
-}
+} */
